# autotools-template

./: .cproject  .gitignore  .project  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen-sh  config.h  config.h.in  config.status  configure  configure.ac  configure.scan
src/dmfutil/: Makefile  Makefile.am  Makefile.in  dmfutil.c  dmfutil.h
src/libdmf/: Makefile  Makefile.am  Makefile.in  asmmath.S  asmmath.s  asmutils.s  fasmutils.asm  initialize.c  libdmf.h  math.c
